# stockagent-research

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-xpu.txt  requirements.txt
.claude/commands/: ralph-loop.md
configs/: default.yaml
configs/data/: d1_ashares_tushare.yaml
configs/experiment/: e1_1.yaml
configs/label/: fixed_horizon.yaml  fixed_window_pwc.yaml
configs/model/: lgbm.yaml
docs/: decision_log.md  execution_plan.md  hybrid_eval_report.md  paper_plan.md  poc_t7_report.md  walkforward_protocol.md
paper/: OUTLINE.md  README_BUILD.md  main.tex  references.bib
paper/sections/: 1_introduction.md  2_related_work.md  3_problem.md  4_architecture.md  5.11_onset_motif.md  5.8_pathway3_results.md  5_experiments.md  6_ablations.md  7_discussion.md  8_conclusion.md  appendix_A_expert_prompt.md
plans/: guardrails.md  prd.json  prd_candlestick_done.json  prd_motif_tradability_done.json  prd_onset_done.json  progress.md
progress/: 2026-W22.md
prompts/: v12_31_expert_v1.md
results/bench/: bench_verdict.json  expa.json  expb.json  expc.json  summary.md
results/candle/: ablation.json  lgbm.json  seq.json  summary.md
results/deploy/: long_only.json  robustness.json  summary.md
results/identify/: neutral_summary.md  summary.md
results/motif/: mi_probe.json  mi_stability.json  regime_gate_bt.json  (+5 more)
scripts/: check_xpu.py  diag_leakage.py
src/: train.py  train_barlow_pretrain.py  train_mlp.py  train_onset.py  train_onset_real.py  train_tcn_finetune.py  train_tcn_wf.py
tests/: test_data_quality.py  test_smoke.py
(+159 files in other folders)
